...
                isAddPressed = false
            }
            
            VStack(alignment: .trailing, spacing: 0){
                if(isAddPressed){
                    HStack(alignment: .center){
                        Text("Register Debit").foregroundColor(.white).fontWeight(.bold)
                        Image(
                            systemName: "minus.circle.fill"
                        )
                        .font(.system(size: 30.0))
                        .foregroundColor(.white)
                    }
...
                    .padding()
                    .onTapGesture {
                        showSheetDebit.toggle()
                    }
                    
                    HStack(alignment: .center){
                        Text("Register Credit").foregroundColor(.white).fontWeight(.bold)
                        Image(
                            systemName: "plus.circle.fill"
                        )
                        .font(.system(size: 30.0))
                        .foregroundColor(.white)
                    }
...
